tests/test_if/test3.wacc
# if condition type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  if 'c' then
    skip 
  else 
    skip
  fi
end
